--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 
 version = '1.0'
-group = 'com.com.syric.betternethermap' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.syric.betternethermap' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'betternethermap'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
