--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.0'
+version = '1.0-1.16.5'
 group = 'com.syric.betternethermap' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'betternethermap'
 
