--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: "0.7-SNAPSHOT"
     }
 }
 plugins {
@@ -135,13 +135,7 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    // Put repositories for dependencies here
-    // ForgeGradle automatically adds the Forge maven and Maven Central for you
-
-    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so:
-    // flatDir {
-    //     dir 'libs'
-    // }
+    maven { url='https://repo.spongepowered.org/repository/maven-public/' }
     maven {
         name = "cursemaven"
         url = "https://cursemaven.com"
@@ -153,8 +147,7 @@ repositories {
 }
 
 mixin {
-    add sourceSets.main, "main.refmap.json"
-    add sourceSets.main, "undergarden.refmap.json"
+    add sourceSets.main, "betternethermap.mixin-refmap.json"
 }
 
 dependencies {
@@ -163,7 +156,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.19.3-44.1.0'
 
-//    implementation fg.deobf("curse.maven:the-undergarden-379849:3810810")
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
+
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // implementation fg.deobf("com.tterrag.registrate:Registrate:MC${mc_version}-${registrate_version}") // Adds registrate as a dependency
@@ -192,7 +187,6 @@ jar {
                 "MixinConfigs": "betternethermap.mixin.json"
         ])
     }
-    rename 'mixin-refmap.json', 'betternethermap.mixin-refmap.json'
 }
 
 // Example configuration to allow publishing using the maven-publish plugin
