--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-    }
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: "0.7-SNAPSHOT"    }
 }
 plugins {
     id 'eclipse'
@@ -17,7 +16,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.0-1.19.3'
+version = '1.0-1.19.2'
 group = 'com.syric.betternethermap' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'betternethermap'
 
@@ -39,7 +38,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.19.3'
+    mappings channel: 'official', version: '1.19'
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -135,6 +134,7 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    maven { url='https://repo.spongepowered.org/repository/maven-public/' }
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
@@ -153,15 +153,16 @@ repositories {
 }
 
 mixin {
-    add sourceSets.main, "main.refmap.json"
-    add sourceSets.main, "undergarden.refmap.json"
+    add sourceSets.main, "betternethermap.mixin-refmap.json"
 }
 
 dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.3-44.1.0'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
+
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
 //    implementation fg.deobf("curse.maven:the-undergarden-379849:3810810")
 
@@ -192,7 +193,6 @@ jar {
                 "MixinConfigs": "betternethermap.mixin.json"
         ])
     }
-    rename 'mixin-refmap.json', 'betternethermap.mixin-refmap.json'
 }
 
 // Example configuration to allow publishing using the maven-publish plugin
